--- a/scrumpoker/resources/manifest.json
+++ b/scrumpoker/resources/manifest.json
@@ -1,13 +1,12 @@
 {
   "short_name": "Scrum Poker",
-  "name": "Scrum Poker",
+  "name": "Scrum Poker",  
   "icons": [
     {
-      "src": "img/icon.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "resources/icon.svg",
+      "sizes": "any"
     }
-  ],
+  ]
   "start_url": "https://800147.github.io/scrumpoker/index.html",
   "background_color": "#000000",
   "display": "standalone",
