--- a/scrumpoker/resources/manifest.json
+++ b/scrumpoker/resources/manifest.json
@@ -4,7 +4,8 @@
   "icons": [
     {
       "src": "icon.svg",
-      "sizes": "any"
+      "sizes": "any",
+      "type": "images/svg"
     }
   ],
   "start_url": "https://800147.github.io/scrumpoker/index.html",
