--- a/scrumpoker/resources/manifest.json
+++ b/scrumpoker/resources/manifest.json
@@ -3,7 +3,7 @@
   "name": "Scrum Poker",  
   "icons": [
     {
-      "src": "icon.svg",
+      "src": "resources/icon.svg",
       "sizes": "any",
       "type": "images/svg"
     }
