--- a/scrumpoker/resources/manifest.json
+++ b/scrumpoker/resources/manifest.json
@@ -9,8 +9,8 @@
     }
   ],
   "start_url": "https://800147.github.io/scrumpoker/index.html",
-  "background_color": "#000000",
   "display": "standalone",
   "orientation": "portrait",
-  "theme_color": "#000000"
+  "theme_color": "black",
+  "background_color": "black"
 }
