--- a/scrumpoker/resources/manifest.json
+++ b/scrumpoker/resources/manifest.json
@@ -1,6 +1,11 @@
 {
   "short_name": "Scrum Poker",
   "name": "Scrum Poker",  
+  "start_url": "https://800147.github.io/scrumpoker/index.html",
+  "display": "fullscreen",
+  "orientation": "portrait-primary",
+  "theme_color": "black",
+  "background_color": "black"
   "icons": [
     {
       "src": "icon.png",
@@ -8,9 +13,4 @@
       "sizes": "any"
     }
   ],
-  "start_url": "https://800147.github.io/scrumpoker/index.html",
-  "display": "standalone",
-  "orientation": "portrait",
-  "theme_color": "black",
-  "background_color": "black"
 }
